// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllowedIpForm.vue when AllowedIpForm was mounted should display AllowedIpForm Component 1`] = `
<div>
  <div class="form-group"><label class="form-label">IP address</label> <input type="text" class="form-input">
    <!---->
  </div>
  <div class="form-group"><button class="btn btn-success btn-submit">
      Submit
    </button>
    <!---->
  </div>
</div>
`;

exports[`AllowedIpForm.vue when update allowedIP should display update allowed ip button 1`] = `
<div>
  <div class="form-group"><label class="form-label">IP address</label> <input type="text" class="form-input">
    <!---->
  </div>
  <div class="form-group">
    <!----> <button class="btn btn-success btn-submit">
      Save
    </button></div>
</div>
`;
